--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ApolinskyMineSweeper</string>
+    <string name="start_game">Start Game</string>
+    <string name="flag_mode">Flag Mode</string>
+    <string name="game_over">Game Over</string>
+    <string name="restart">Restart</string>
+    <string name="you_won">You Won!</string>
+    <string name="you_lost">You Lost!</string>
+    <string name="apolinsky_mine_sweeper">Apolinsky Mine Sweeper</string>
 </resources>
